vest-dsl/test/bad/const_int_value_range4.vest
const FOO: u64 = 18446744073709551616
